# ERIC-ROBOTICS-TASK

./: README.md
testbed_navigation/: CMakeLists.txt  package.xml
testbed_navigation/config/: amcl_params.yaml  controller_server.yaml  nav2_params.yaml  planner_server.yaml
testbed_navigation/launch/: full_navigation.launch.py  localization.launch.py  map_loader.launch.py  navigation.launch.py  waypoint_follower.launch.py
