<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>testbed_navigation</name>
    <version>0.0.0</version>
    <description>Navigation package for Testbed-T1.0.0 robot</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>nav2_amcl</depend>
    <depend>nav2_map_server</depend>
    <depend>nav2_lifecycle_manager</depend>
    <depend>nav2_controller</depend>
    <depend>nav2_planner</depend>
    <depend>nav2_bt_navigator</depend>
    <depend>nav2_recoveries</depend>
    <depend>nav2_waypoint_follower</depend>
    <depend>nav2_regulated_pure_pursuit_controller</depend>
    <depend>nav2_navfn_planner</depend>
    <depend>nav2_costmap_2d</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>nav2_msgs</depend>
    <depend>nav2_util</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>